# starter-fastapi

./: .env.example  .gitignore  pyproject.toml  ruff.toml
alembic/: env.py  test.py
app/: settings.py
app/db/: __init__.py
app/users/: models.py
app/utils/: imports.py  models.py  paths.py
