[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["JD Solanki <jdsolanki0001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
ruff = "^0.0.289"
sqlalchemy = "^2.0.20"
pydantic-settings = "^2.0.3"
alembic = "^1.12.0"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
